--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,9 @@
             <div id="rightPanel">
                 <div id="mainMenu1" class="mainMenu" data-mainmenu-id="1"> All Reports</div>
                 <div id="mainMenu2" class="mainMenu hidden" data-mainmenu-id="2"> Track My Car</div>
-                <div id="mainMenu3" class="mainMenu hidden" data-mainmenu-id="3"> History</div>
+                <div id="mainMenu3" class="mainMenu hidden" data-mainmenu-id="3">
+                    <div id="mapDiv" class="mapDiv"></div>
+                </div>
                 <div id="mainMenu4" class="mainMenu hidden" data-mainmenu-id="4"> List All Cars</div>
                 <div id="mainMenu5" class="mainMenu hidden" data-mainmenu-id="5"> List All Groups</div>
             </div>
